--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -31,6 +31,7 @@
             </ComboBox>
 
             <Button x:Name="Run_btn" Margin="0 5 0 0" Click="Run_btn_Click">Run</Button>
+            <CheckBox x:Name="mycheckBox" Margin="0 5 0 0" IsChecked="True">Hidden cmd</CheckBox>
 
         </StackPanel>
       
