--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kontokollen_2._0"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="800">
     <Grid>
 
         <StackPanel>
@@ -36,6 +36,7 @@
             <Button x:Name="Run_btn" Margin="0 5 0 0" Click="Run_btn_Click">Run</Button>
             <CheckBox x:Name="mycheckBox" Margin="0 5 0 0" IsChecked="True">Hidden cmd</CheckBox>
 
+            <Image x:Name="Image1" Margin="0 20 0 0" Width="300" Source="" />            
             <TextBlock x:Name="TextBlock1" Margin="0 20 0 0"/>
 
         </StackPanel>
