--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -31,6 +31,7 @@
                 <ComboBoxItem>Drivmedel</ComboBoxItem>
                 <ComboBoxItem>Bil</ComboBoxItem>
                 <ComboBoxItem>Restauranger</ComboBoxItem>
+                <ComboBoxItem>Okategoriserat</ComboBoxItem>
             </ComboBox>
 
             <Button x:Name="Run_btn" Margin="0 5 0 0" Click="Run_btn_Click">Run</Button>
